--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.johnnywic</groupId>
     <artifactId>bybit-java-api</artifactId>
-    <version>1.2.9</version> <!-- 改为正式版本，去掉 -SNAPSHOT -->
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <name>bybit-java-api</name>
